@@ -1,0 +1,2 @@
+index.html /usr/share/zentyal-webserver/
+ssl-config.conf /usr/share/zentyal-webserver/
