@@ -18,11 +18,12 @@
 % }
 
 <VirtualHost *:<% $port %>>
-    ServerName <% $hostname %>:<% $publicPort %>
+    ServerName <% $hostname %>
 
     ServerAdmin webmaster@<% $hostname %>
 
-    DocumentRoot /var/www/
+    DocumentRoot /var/www/html/
+    DirectoryIndex index.html
 
     # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
     # error, crit, alert, emerg.
@@ -32,6 +33,12 @@
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+    <Directory "/var/www/html/">
+        Options Indexes FollowSymLinks
+        AllowOverride None
+        Require all granted
+    </Directory>
 
     # For most configuration files from conf-available/, which are
     # enabled or disabled at a global level, it is possible to
