@@ -36,9 +36,3 @@
       sslSupport => $sslSupport,
 &>
 
-<Directory /srv/www/<% $vHostName %>>
-      Options Indexes FollowSymLinks
-      AllowOverride None
-      Require all granted
-</Directory>
-
